# temple

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  cms-edit-fields-readonly.json  cms-readonly-frames.json  cms-resource-fields-readonly.json  current-crawl.json  current-links.json  current-sections.json  docker-compose.yml  plan.md  pyproject.toml
.playwright-mcp/: page-2026-07-12T09-12-44-768Z.yml  page-2026-07-12T09-14-01-250Z.yml  page-2026-07-12T09-15-49-022Z.yml  page-2026-07-12T09-16-35-869Z.yml  page-2026-07-12T09-18-05-345Z.yml
outputs/: cms-current-shortcomings.md  cms-full-test-report.md  cms-shortcomings-remediation-plan.md  cms-solution-description.md  cms-test-suite-review.md  cms-user-guide.md  completion-audit.md  design-system.html  design-system.md  legacy-inventory.json  legacy-inventory.md  migration-readiness.json  migration-readiness.md  missing-legacy-media.csv  missing-legacy-media.md  site-map.md  sv-innokenty-design-system-v2.pptx  sv-innokenty-design-system.pptx.inspect.ndjson
scripts/: download_baseline.ps1  production_apply_point1.sh  production_apply_stage10.sh  production_apply_stage2.sh  production_apply_stage3.sh  production_apply_stage4.sh  production_apply_stage5.sh  production_apply_stage6.sh  production_apply_stage7.sh  production_apply_stage8.sh  production_apply_stage9.sh  production_baseline.sh  run_cms_regression.py  stage10_restore_smoke.py  stage7_restore_smoke.py  stage8_restore_smoke.py  stage9_restore_smoke.py
server/: __init__.py  app.py  baseline.py  config.py  content_blocks.py  db.py  (+19 more)
(+56 files in other folders)
