[project]
name = "sv-innokenty-cms"
version = "0.1.0"
description = "Новая CMS и сайт храма святителя Иннокентия"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.32,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]
crawl = [
  "playwright>=1.55,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
