[project]
name = "sv-innokenty-cms"
version = "0.1.0"
description = "Новая CMS и сайт храма святителя Иннокентия"
requires-python = ">=3.11"
dependencies = [
  "av>=14,<17",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "olefile>=0.47,<1",
  "pillow>=11.2,<13",
  "pypdfium2>=4.30,<5",
  "python-multipart>=0.0.20,<1",
  "tzdata>=2025.2",
  "uvicorn[standard]>=0.32,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]
crawl = [
  "playwright>=1.55,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
